--- a/public/index.handlebars
+++ b/public/index.handlebars
@@ -20,7 +20,7 @@
 
                 <div class="form-group">
                     <label>Title</label>
-                    <input type="text" class="form-control" id="title" name="title" placeholder="Enter your name">
+                    <input type="text" class="form-control" id="title" name="title" placeholder="Enter the product">
                 </div>
                 <div class="form-group">
                     <label>Price</label>
